--- a/kafka/Dockerfile
+++ b/kafka/Dockerfile
@@ -1,3 +1,3 @@
 FROM confluentinc/cp-kafka:7.6.0
 
-COPY ./scripts/kafka-setup-k8s.sh /kafka-setup-k8s.sh
+COPY ./scripts/kafka-setup.sh /kafka-setup.sh
